# ymm4_renamer

./: Cargo.toml  LICENSE  README.md
src/: args.rs  error.rs  logging.rs  main.rs
src/renamers/: kitsune_yukkuri.rs  mod.rs
src/validators/: kitsune_yukkuri.rs  mod.rs
